<resources>
    <string name="app_name">MOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_deskripsi">Tidak khawatir ketinggalan update\nFilm-film terbaru </string>
    <string name="easy_to_use">Easy to Use</string>
    <string name="easy_to_use_deskripsi">Lebih mudah untuk membeli\nTiket bioskop di MOV</string>
    <string name="get_started">Get Started</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_deskripsi">Gunakan e-wallet untuk transaksi\nTiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome\nOnyx Pray</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="onyx">Onyxpray</string>
    <string name="rp">Rp. 1.000.000</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="date_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="item">Items</string>
    <string name="may">21 May, 6 P.M</string>
    <string name="location">Central Park, Cinema 3</string>
    <string name="seat_a1">Seat No. A1</string>
    <string name="seat_a2">Seat No. A2</string>
    <string name="rp_65">Rp. 65.000</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="rp_130">Rp. 130.000</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_new">Save New Update</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="history">History</string>
    <string name="movies_500">500 Movies</string>
    <string name="onyxpray">Onyx Pray</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="when">When</string>
</resources>